--- a/_includes/sidebar-left.html
+++ b/_includes/sidebar-left.html
@@ -1,14 +1,7 @@
 <header class="masthead">
-  {% if site.avatar -%}
-    <div class="avatar">
-      {%- if site.avatar contains "://" -%}
-        {%- assign avatar = site.avatar -%}
-      {%- else -%}
-        {%- assign avatar = site.avatar | relative_url -%}
-      {%- endif -%}
-      <img src="{{ avatar }}" class="avatar-image" alt="{{ site.author.name }}">
+    <div class="myphoto">
+      <img src="{{ site.myphoto }}" class="myphoto-image" alt="{{ site.author.name }}">
     </div>
-  {%- endif %}
   <div class="masthead-title">
     <a href="{{ "/" | relative_url }}" title="Home">{{ site.title }}</a>
   </div>
