--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -13,7 +13,7 @@
   }
 }
 
-.avatar-image {
+.myphoto-image {
   width: 30%;
   height: auto;
   border-radius: 50%;
@@ -39,7 +39,7 @@
   margin: 0;
   font-size: 1.25rem;
   font-weight: 400;
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .navigation-list {
@@ -71,7 +71,7 @@
   margin-top: var(--spacer-2);
   font-size: 150%;
   white-space: normal;
-  line-height: .5;
+  line-height: 0.5;
 }
 
 .social-icon {
@@ -84,7 +84,7 @@
 }
 
 @media (max-width: $md-width) {
-  .avatar-image {
+  .myphoto-image {
     width: 15%;
   }
 }
